<resources>
    <string name="hello">Hello World, HttpExampleActivity!</string>
    <string name="app_name">Spinning Half</string>
    <string name="search">CONNECT TO WEBSITE</string>
    <string name="jersey_jaxrs_gigs">http://www.spinning-half-jersey-jaxrs.appspot.com/rest/gigs</string>
    <string name="titleGigTimeline">Gig Listing</string>
    <string name="label_show">Show</string>
    <string name="label_date">Date</string>
    <string name="label_venue">Venue</string>
    <string name="label_description">Description</string>
    <string name="label_price">Price $</string>
    <string name="label_tixUrl">Ticket Link</string>
    <string name="showGreeting">Please select a gig to view.</string>
    <string name="headOffice">Head Office</string>
    <string name="headOfficeStreetAddress">Suite 3/2 Fenwick St South</string>
    <string name="headOfficeCityRegionState">Geelong, VIC 3220</string>
    <string name="headOfficePhoneNumber">(03) 5222 1186</string>
    <string name="headOfficeEmail">info@spinninghalf.com.au</string>
    <string name="rehearsalsMobileNumber">0421 866 977</string>
    <string name="Landline">Landline:</string>
    <string name="Mobile">Mobile:</string>
    <string name="Email">Email:</string>
    <string name="newsBlurb1">Keep up to date with us through our Facebook page. Everything from announcements to photos of some of our recent shows.</string>
    <string name="servicesFunctionPackages">Function Packages</string>
    <string name="servicesFunctionPackagesBlurb1">For all your important occassions like weddings, 18th and 21st birthdays, uni functions and general coporate events we can supply tailored 
        function packages for you.</string>
    <string name="servicesFunctionPackagesBlurb2">Depending on the event, you can choose which components you will need: PA system, lighting, Djs, band &amp; PA operators. We have experience all these areas and 
        know how crucial it is to get right, first time. Basically our aim is for you to have the idea of what the event will be and we will sort out all the neccessary details required to 
        deliver the event. Let us figure it out for you! Please have a look at the photos below to get a better idea of what can we do.</string>
    <string name="servicesPublicity">Publicity</string>
    <string name="servicesPublicityBlurb1">Do you want your newly recorded music to get out there, hitting all forms of media accross the country? And do you want to tour your music around Australia and play it out in 
        prestigious music venues to appreciative punters? These are all questions we aim to answer with our Publicity Initiative. Through the use of our preestablished nationwide networks involving Booking Agents, 
        Venue Bookers &amp; Media contacts we are able to service your musical offering to the key locations around Australia.</string>
    <string name="servicesPublicityBlurb2">Through years of working with bands from all around Australia, we have designed an affordable service for bands which allows them to tour their music whilst generating that 
        crucial publicity element via interviews, media features, support tours &amp; music reviews both printed and online. Think of servicing your music as trying to get the attention of as many people as possible, 
        all of which are geographically scattered throughout Australia.</string>
    <string name="servicesPublicityBlurb3">If you are interested in what we can offer to service your musical art then please contact us via the Contact Us Section.</string>
    <string name="servicesTraining">Training</string>
    <string name="servicesTrainingBlurb1">One of our mantras at Spinning Half is to always allow someone who\'s interested in learning about our field the opportunity to do so. If that means taking on board work experience
        students, providing on site mentoring or running dedicated classes then that\'s what it will be. Understanding that there are many areas involved in running a successful event and that they 
        all have to operate together is key. Education in each component and where it is in the event timeline (pre, during or post event) is available and comes from a practical, tried &amp; tested
        music industry angle. </string>
    <string name="servicesTrainingBlurb2">We offer areas in education such as Booking Bands &amp; Management, Promotions &amp; PR and Technical Operation. There is the music side and there is the business side to 
        the Music Indusrty and we can assure you that, if you\'re interested, there exists a field for you which is both rewarding and fun.</string>
    <string name="servicesTrainingBlurb3">The Spinning Half team is available to come to schools, organizations and meetups to educate and encourage students &amp; attendees about what possibilities there
        are when considering a life in the Music Industry. </string>
    <string name="servicesDistribution">Distribution</string>
    <string name="servicesDistributionBlurb1">If you have some advertising content that you need to get distributed direct to the public then use us! We have dedicated street teams available for poster 
        distribution campaigns and have extensive knowledge of key local areas where the content is most effective &amp; can get you the most band for your buck! </string>
    <string name="servicesDistributionBlurb2">Some of our past jobs have been: i) The Australian Government\'s \'Get Reading!\' initiative which ran nationwide in 2012. Our responsibility was to deliver
        handbooks to all Geelong and The Surfcoast Region primary schools thereby encouraging the development of parent-child reading activities. It was a rewarding job for all of us. ii) Music Industry National
        &amp; International Tours have been a consistent area of expertise for us. Past tours we\'ve worked on have been D12 (International), Xzibit(Internation), Boy &amp; Bear (National), Parkway Drive (National)
        to name a few. iii) External Festivals like the Indonesian Arts &amp; Food Festival (2012).</string>
    <string name="servicesDistributionBlurb3">If you are interested finding out more please contact us via the Contact Us Section.</string>
    <string name="servicesDesign">Design</string>
    <string name="servicesDesignBlurb1">Correct design is an absolutely crucial area for us to get right when promoting our shows. Our view is that good design enables the public to easily grasp a 
        clear and clean idea of what the event aims to achieve whilst conveying all the important &amp; neccessary information. That\'s why everything related to promoting our shows goes through 
        trusted, established &amp; highly trained inhouse designers. They are able to provide content for a wide variety of media types &amp; form factors: i) Printed Media: posters, flyers, 
        business cards, ticket printing. ii) Online Design: website coding and design. Our designers are also available for freelance work for design criteria falling outside the scope of the 
        music industry. </string>
    <string name="servicesDesignBlurb2">Please contact us via the Contact Us Section for a further listing of all our design services &amp; their associated rates.</string>
    <string name="rehearsals">Rehearsals</string>
    <string name="rehearsalsPhrase">A place to make noise that feels like home without the neighbours complaining.</string>
    <string name="rehearsalsBigRoom">Big Band Room</string>
    <string name="rehearsalsSmallRoom">Studio Room</string>
    <string name="rehearsalsBigRoomBlurb1">Renovated living space</string>
    <string name="rehearsalsSmallRoomBlurb1">Studio tracking room</string>
    <string name="rehearsalsBigRoomBlurb2">Vocal and Drum PA</string>
    <string name="rehearsalsSmallRoomBlurb2">Flown vocal PA</string>
    <string name="rehearsalsBigRoomBlurb3">Kitchen and Couches</string>
    <string name="rehearsalsSmallRoomBlurb3">Fridge and Microwave</string>
    <string name="rehearsalsBigRoomBlurb4">4 hour session</string>
    <string name="rehearsalsSmallRoomBlurb4">4 hour session</string>
    <string name="rehearsalsBigRoomBlurb5">$50 per session</string>
    <string name="rehearsalsSmallRoomBlurb5">$40 per session</string>
    <string name="rehearsalsAdditionalInfo">Additional Info</string>
    <string name="rehearsalsAdditionalInfo2">There are no curfews. Rehearse through the night if need be.</string>
    <string name="rehearsalsAdditionalInfo1">5 Piece Drum Kit and Bass Amp Available, $10 each.</string>
    <string name="rehearsalsAdditionalInfo3">Secure location with lots of Parking Spaces.</string>
</resources>