<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
   android:layout_width="match_parent" 
   android:layout_height="wrap_content" 
   android:layout_weight="1">
   <TableLayout android:layout_width="match_parent" 
      android:layout_height="wrap_content"
      android:stretchColumns="1"
      android:shrinkColumns="1" 
      android:layout_margin="5dp">
      
      <TableRow android:id="@+id/showTableRow"
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content">
         
         <TextView android:id="@+id/showLabelTextView" 
            style="@style/GigLabelTextView"
            android:text="@string/label_show" />
         
         <TextView android:id="@+id/showTextView"
             style="@style/GigTextView"
             android:text="@string/showGreeting" />
         
      </TableRow>

      <TableRow android:id="@+id/dateTableRow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         
         <TextView android:id="@+id/dateLabelTextView" 
            style="@style/GigLabelTextView"
            android:text="@string/label_date" />
         
         <TextView android:id="@+id/dateTextView"
            style="@style/GigTextView" />
         
      </TableRow>
      
      <TableRow android:id="@+id/venueTableRow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         
         <TextView android:id="@+id/venueLabelTextView" 
            style="@style/GigLabelTextView"
            android:text="@string/label_venue" />
         
         <TextView android:id="@+id/venueTextView"
            style="@style/GigTextView" />
         
      </TableRow>

      <TableRow android:id="@+id/descriptionTableRow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         
         <TextView android:id="@+id/descriptionLabelTextView" 
            style="@style/GigLabelTextView"
            android:text="@string/label_description" />
         
         <TextView android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	style="@style/GigTextView" />
         
      </TableRow>

      <TableRow android:id="@+id/priceTableRow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         
         <TextView android:id="@+id/priceLabelTextView" 
            style="@style/GigLabelTextView"
            android:text="@string/label_price" />
         
         <TextView android:id="@+id/priceTextView"
            style="@style/GigTextView" />
         
      </TableRow>

      <TableRow android:id="@+id/tixUrlTableRow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         
         <TextView android:id="@+id/tixUrlLabelTextView" 
            style="@style/GigLabelTextView"
            android:text="@string/label_tixUrl" />
         
         <TextView android:id="@+id/tixUrlTextView"
             android:autoLink="web"
            style="@style/GigTextView" />
         
      </TableRow>
   </TableLayout>
</ScrollView>
