<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/servicesTrainingHeading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/headings"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/large_heading"
            android:text="@string/servicesTraining" />
        
        <TextView
            android:id="@+id/servicesTrainingTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicesTrainingBlurb1" />
        
        <TextView
            android:id="@+id/servicesTrainingTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicesTrainingBlurb2" />
        
        <TextView
            android:id="@+id/servicesTrainingTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicesTrainingBlurb3" />
        
    </LinearLayout>
    

</ScrollView>