<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/servicesPublicityHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/headings"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/large_heading"
            android:text="@string/servicesPublicity" />
        
        <TextView
            android:id="@+id/servicesPublicityTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicesPublicityBlurb1" />
        
        <TextView
            android:id="@+id/servicesPublicityTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicesPublicityBlurb2" />
        
        <TextView
            android:id="@+id/servicesPublicityTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicesPublicityBlurb3" />
        
    </LinearLayout>
    

</ScrollView>