<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/servicesDistributionHeading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/headings"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/large_heading"
            android:text="@string/servicesDistribution" />
        
        <TextView
            android:id="@+id/servicesDistributionTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicesDistributionBlurb1" />
        
        <TextView
            android:id="@+id/servicesDistributionTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicesDistributionBlurb2" />
        
        <TextView
            android:id="@+id/servicesDistributionTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicesDistributionBlurb3" />
        
    </LinearLayout>
    

</ScrollView>