<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/servicesDesignHeadingTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/headings"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/servicesDesign"
            android:textSize="@dimen/large_heading" />
        
        <TextView
            android:id="@+id/servicesDesignBlurb1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicesDesignBlurb1" />

        <GridView
            android:id="@+id/servicesDesignGridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="4" >
        </GridView>
        
        <TextView
            android:id="@+id/servicesDesignBlurb2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicesDesignBlurb2" />

    </LinearLayout>
    

</ScrollView>